@@ -1,13 +1,10 @@
-package com.example.springmvclab.controller;
+package com.example.spring_mvc_lab.controller;
 
-import com.example.springmvclab.model.Product;
-import com.example.springmvclab.service.ProductService;
+import com.example.spring_mvc_lab.model.Product;
+import com.example.spring_mvc_lab.service.ProductService;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
@@ -18,27 +15,28 @@ public class ProductController {
 
     private final ProductService productService;
 
-    // Constructor Injection (Week 3 pattern)
     public ProductController(ProductService productService) {
         this.productService = productService;
     }
 
-    // GET /products → tampilkan semua produk
+    // GET /products
     @GetMapping
-    public String listProducts(Model model) {  // ← Model object (Baki Pengantar)
-        List<Product> products = productService.findAll();  // ← dari Service (Model Layer/Dapur)
+    public String listProducts(Model model) {
 
-        model.addAttribute("products", products);       // ← taruh Data Class di Baki
+        List<Product> products = productService.findAll();
+
+        model.addAttribute("products", products);
         model.addAttribute("title", "Daftar Produk");
         model.addAttribute("totalProducts", products.size());
 
-        return "product/list";  // → templates/product/list.html
+        return "product/list";
     }
 
-    // GET /products/42 → tampilkan detail produk
+    // GET /products/{id}
     @GetMapping("/{id}")
     public String productDetail(@PathVariable Long id, Model model) {
-        Optional<Product> product = productService.findById(id);
+
+        Optional<Product> product = productService.findById(id); // FIXED (tidak static)
 
         if (product.isPresent()) {
             model.addAttribute("product", product.get());
@@ -48,12 +46,13 @@ public class ProductController {
             model.addAttribute("title", "Produk Tidak Ditemukan");
         }
 
-        return "product/detail";  // → templates/product/detail.html
+        return "product/detail";
     }
 
-    // GET /products/category/Elektronik → filter by category
+    // GET /products/category/{category}
     @GetMapping("/category/{category}")
     public String productsByCategory(@PathVariable String category, Model model) {
+
         List<Product> products = productService.findByCategory(category);
 
         model.addAttribute("products", products);
@@ -61,14 +60,19 @@ public class ProductController {
         model.addAttribute("totalProducts", products.size());
         model.addAttribute("selectedCategory", category);
 
-        return "product/list";  // reuse template yang sama!
+        return "product/list";
     }
 
-    // GET /products/search?keyword=laptop → search produk
+    // GET /products/search?keyword=xxx
     @GetMapping("/search")
-    public String searchProducts(@RequestParam(defaultValue = "") String keyword,
+    public String searchProducts(@RequestParam(required = false) String keyword,
                                  Model model) {
-        List<Product> products = keyword.isBlank()
+
+        if (keyword == null || keyword.trim().isEmpty()) {
+            keyword = "";
+        }
+
+        List<Product> products = keyword.isEmpty()
                 ? productService.findAll()
                 : productService.search(keyword);
 
@@ -77,6 +81,6 @@ public class ProductController {
         model.addAttribute("totalProducts", products.size());
         model.addAttribute("keyword", keyword);
 
-        return "product/list";  // reuse template yang sama!
+        return "product/list";
     }
 }
